[package]
name = "topsy-turvy"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["macros"] }
chacha20poly1305 = "0.10.1"
chrono = "0.4.39"
dotenv = "0.15.0"
hex = "0.4.3"
# jsonwebtoken = "9.3.1"
libsql = "0.6.0"
# ron = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_millis = "0.1.1"
sha2 = "0.10.8"
# sha2 = "0.10.8"
strip-ansi-escapes = "0.2.1"
tempfile = "3.16.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
