[package]
name = "code-judge"
version = "0.1.0"
edition = "2021"

[dependencies]
# ansi-to-html = "0.2.2"
axum = { version = "0.8.4", features = ["macros", "ws"] }
futures = "0.3.31"
libsql = "0.9.9"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
